# TubLatexMaker

./: .gitignore  README.md  README.rst  main.py  pyproject.toml
docs/: conf.py  index.rst  modules.rst  tests.rst  tublatexmaker.rst  tublatexmaker.services.rst
output/: sample-output.txt
samples/: commentaries in full.aux  commentaries in full.tex  commentaries in full.toc  only-commentary-numbers.aux  only-commentary-numbers.tex  only-commentary-numbers.toc
src/: main.py  tub.py  tub_latex_converter.py
src/services/: tub_media_wiki_service.py
tests/: test_main.py  test_tub_latex_converter.py
tublatexmaker/: json_to_latex_converter.py  latex_builder.py  latex_creater.py  main.py  tub_latex_converter.py
tublatexmaker/services/: file_writer_service.py  tub_media_wiki_service.py
