[tool.poetry]
name = "tublatexmaker"
version = "0.1.0"
description = ""
authors = ["pooya <pooya72@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
